- Added generic annotation/setter based parsing
- Added Apache Flink mapper
- Added Apache Beam function
- Updated dependencies Antlr 4, Apache Hadoop, Apache Pig, Checkstyle
- Changed the structure of an extracted Keyvalue.
- Rearranged the structure of StepDown (core step in walking around).
- Added Apache Hive UDF
- Various performance improvements (overall effect is approx 30% less time needed)
- Refactored the webapp to use Spring-boot
- Switched from Cobertura to JaCoCo (because of Java 8)

v2.1
===
- Rewrote managing matches to reduce allocation/gc load (i.e. improve performance)
- Determine the Device Cpu Bits (i.e. 32 or 64) where possible.
- Stop release process if there are uncommitted changes.

v2.2
===
- Detect Firefox Focus and a more generic pattern for WebView applications
- Fixed NPE

v3.0
===
- Avoid DDOS (too long parsing times). Without actual parsing: Useragent too tong == hacker.
- Separate the parser from the caching.
- Massive rewrite of the Builder system to avoid redundant code (hence 3.0)
- Platfora UDF is no longer part of the release.

v3.1
===
- Detect Microsoft Edge for Android & iOS

v3.2
===
- Detect Chromium, SugarLabs, Ubuntu Touch
- Detect few more robots
- New matching language feature: Is this value present in a predefined set of values?
- New matching language feature: Basic String concatenation
- New matching language feature: Variables
- Make doing 2,3 and 4 steps Next/Prev more efficient
- [Davide Magni] Small fixes on WEB-INF to test & deploy using NetBeans.
- [Davide Magni] Simple change in form POST action (Parse Service) to support deploying in both root and non-root paths on webservers.
- [Davide Magni] Massively improved Android brand detection for Sony, Xiaomi, Wiko, LG, Huawei, Alcatel, Vodafone, Meizu and Asus by Davide Magni (BIG THANKS!)
- Make matching prefix strings use the HashMap for performance improvement

v3.3
===
- By default do not load all test cases into memory