@@ -1572,35 +1572,34 @@ config:
       AgentSecurity                        : 'Strong security'
 
 
+# Disputable if this is a hacker or not; I say it is a hacker.
 - test:
     input:
       user_agent_string: 'Mozilla/5.0 (Linux; Android 4.4.2; xx; ${ro.product.subbrand} ${ro.product.submodel} Build/E0005.00) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/30.0.0.0 Safari/537.36'
     expected:
-      DeviceClass                          : 'Tablet'
-      DeviceName                           : '${ro .product.subbrand} ${ro.product.submodel}'
-      DeviceBrand                          : '${ro'
-      OperatingSystemClass                 : 'Mobile'
-      OperatingSystemName                  : 'Android'
-      OperatingSystemVersion               : '4.4.2'
-      OperatingSystemNameVersion           : 'Android 4.4.2'
-      OperatingSystemVersionBuild          : 'E0005.00'
-      LayoutEngineClass                    : 'Browser'
-      LayoutEngineName                     : 'Blink'
-      LayoutEngineVersion                  : '30.0'
-      LayoutEngineVersionMajor             : '30'
-      LayoutEngineNameVersion              : 'Blink 30.0'
-      LayoutEngineNameVersionMajor         : 'Blink 30'
-      AgentClass                           : 'Browser Webview'
-      AgentName                            : 'Chrome Webview'
-      AgentVersion                         : '30.0.0.0'
-      AgentVersionMajor                    : '30'
-      AgentNameVersion                     : 'Chrome Webview 30.0.0.0'
-      AgentNameVersionMajor                : 'Chrome Webview 30'
+      DeviceClass                          : 'Hacker'
+      DeviceName                           : 'Hacker'
+      DeviceBrand                          : 'Hacker'
+      DeviceVersion                        : 'Hacker'
+      OperatingSystemClass                 : 'Hacker'
+      OperatingSystemName                  : 'Hacker'
+      OperatingSystemVersion               : 'Hacker'
+      OperatingSystemNameVersion           : 'Hacker'
+      LayoutEngineClass                    : 'Hacker'
+      LayoutEngineName                     : 'Hacker'
+      LayoutEngineVersion                  : 'Hacker'
+      LayoutEngineVersionMajor             : 'Hacker'
+      LayoutEngineNameVersion              : 'Hacker'
+      LayoutEngineNameVersionMajor         : 'Hacker'
+      AgentClass                           : 'Hacker'
+      AgentName                            : 'Hacker'
+      AgentVersion                         : 'Hacker'
+      AgentVersionMajor                    : 'Hacker'
+      AgentNameVersion                     : 'Hacker'
+      AgentNameVersionMajor                : 'Hacker'
+      HackerAttackVector                   : 'Unknown'
+      HackerToolkit                        : 'Unknown'
       __SyntaxError__                      : 'true'
-      WebviewAppName                       : 'Unknown Webview App'
-      WebviewAppNameVersionMajor           : 'Unknown Webview App ??'
-      WebviewAppVersion                    : '??'
-      WebviewAppVersionMajor               : '??'
 
 
 # Some useragents are broken in the sense that the last entry is just the word 'mobile' instead of "Mobile Safari". We assume these are phones too.
