@@ -183,3 +183,4 @@ v3.2
 v3.3
 ===
 - By default do not load all test cases into memory
+- Fixed NPE in parse error situation (Hacker scenario)
